--- a/style.css
+++ b/style.css
@@ -6,25 +6,75 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
+  align-content: center;
 }
-.div-logo {
+.channel {
+  overflow: hidden;
+  display: flex;
+  background-color: #ae012b;
+  text-transform: uppercase; /*deixar em caixa alta*/
+  top: 0px; /* Position the navbar at the top of the page */
+  width: 100%; /* Preencher todos os lados do navbar */
+  padding: 0;
+  color: white;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 10vh;
+  margin: 0;
+}
+ul {
+  display: flex; /*Alinhamento horizontal*/
+  justify-content: space-between; /*espaçamento entre os itens*/
+  list-style-type: none; /*tirar as marcações da lista*/
+  align-items: center; /*alinhado verticalmente ao centro*/
+  padding: 16px; /*distancia maior entre itens de cima e de baixo*/
+  flex-wrap: nowrap;
+  padding: 0;
+  margin-right: 10px;
+} 
+.esquerdo {
+
+}
+
+.band-lg {
   margin-top: 0px;
   padding: 0px;
-  width: 34px;
-  height: 20px;
 }
-.menu-canais {
-  position: fixed;
-  justify-content: space-around;
-  align-items: center;
-  background: #ae012b;
-  height: 8vh;
-  width: 100%;
-  
-}
-.div-canais {
+.div-channel {
   overflow: hidden;
   align-items: center;
   color: white;
   position: fixed;
+  justify-content: center
+}
+.direito {
+  color: white;
+  
+
+}
+a {
+  color: white; /*cor do link a*/
+  text-decoration: none; /*tirar sublinhado*/
+}
+.container {
+
+}
+.container p {
+}
+
+.news {
+  align-content: center;
+}
+.nav-item {
+  margin: 0 20px;
+}
+h2 {
+  align-content: center;
+}
+.lista-news {
+  
+}
+p {
+ 
 }
